--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,11 +7,11 @@
     <string name="compression_method">Способ сжатия</string>
     <string name="ok">OK</string>
     <string name="enter_password">Введите пароль</string>
-    <string name="zip_creation_success">Zip-архив создан успешно</string>
+    <string name="zip_creation_success">Zip-архив успешно создан</string>
     <string name="zip_creation_failed">Ошибка при создании ZIP-архива</string>
     <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
     <string name="share">Поделиться ссылкой на приложение</string>
-    <string name="sevenz_creation_success">7z-архив создан успешно</string>
+    <string name="sevenz_creation_success">7z-архив успешно создан</string>
     <string name="enter_name_of_archive_optional">Имя архива</string>
     <string name="split_size_mb">Разделить по размеру</string>
     <string name="split_zip">Разделить ZIP</string>
@@ -52,21 +52,21 @@
     <string name="show_hide_selected_files">Показать/Скрыть выбранные файлы</string>
     <string name="background">Фон</string>
     <string name="open_with">Открыть с</string>
-    <string name="compress_with">Сжать с:</string>
+    <string name="compress_with">Сжать с помощью:</string>
     <string name="confirm_delete">Подтверждение удаления</string>
-    <string name="confirm_delete_message">Вы уверены, что хотите удалить этот объект?</string>
+    <string name="confirm_delete_message">Вы уверены, что хотите удалить этот элемент?</string>
     <string name="delete">Удалить</string>
     <string name="file_path">Путь</string>
     <string name="file_size">Размер</string>
     <string name="last_modified">Последнее изменение</string>
     <string name="file_info">Сведения о файле</string>
-    <string name="multi_part_extract">Массовое извлечение:</string>
+    <string name="multi_part_extract">Извлечение из нескольких частей:</string>
     <string name="copy_text">Копировать</string>
     <string name="info_tip">Полезный совет</string>
     <string name="general_error_msg">Возникла неожиданная ошибка.</string>
-    <string name="access_denied">Доступ запрещен</string>
-    <string name="no_files_to_archive">Файлы не были выбраны для архивации</string>
-    <string name="sd_card_not_available">SD-карта или внешний накопитель не обнаружены</string>
+    <string name="access_denied">Отказано в доступе</string>
+    <string name="no_files_to_archive">Файлы для архивации не выбраны</string>
+    <string name="sd_card_not_available">SD-карта или внешнее хранилище не обнаружены</string>
     <string name="copying_files">Копируется…</string>
     <string name="moving_files">Перемещается…</string>
     <string name="delete_ongoing">Удаляется…</string>
@@ -75,14 +75,14 @@
     <string name="copying_files_progress">Копирование файлов: %1$d/%2$d</string>
     <string name="moving_files_progress">Перемещение файлов: %1$d/%2$d</string>
     <string name="deleting_files">Удаление файлов: %1$d/%2$d</string>
-    <string name="extracting_progress">Извлекается... %1$d %%</string>
-    <string name="compressing_progress">Архивация... %1$d %%</string>
+    <string name="extracting_progress">Извлекается… %1$d %%</string>
+    <string name="compressing_progress">Архивация… %1$d %%</string>
     <string name="copy_move_files_notification_name">Копировать/Переместить файлы</string>
     <string name="extract_archive_notification_name">Извлечь архив</string>
     <string name="compress_archive_notification_name">Сжать архив</string>
     <string name="privacy_policy">Политика конфиденциальности</string>
     <string name="source_code">Исходный код</string>
-    <string name="crash_log">Протокол сбоев</string>
+    <string name="crash_log">Журнал сбоев</string>
     <string name="move">Переместить в</string>
     <string name="copy_to">Копировать в</string>
     <string name="action_settings">Настройки</string>
@@ -105,17 +105,17 @@
     <string name="extension">Расширение</string>
     <string name="close">Закрыть</string>
     <string name="extract_path">Папка извлеченных файлов</string>
-    <string name="archive_path">Папка архивных файлов</string>
-    <string name="archive_path_summary">Укажите папку извлечения по умолчанию. \nПо умолчанию это \"родительская папка\"</string>
-    <string name="extract_path_summary">Укажите папку извлечения по умолчанию. \nПо умолчанию используется \"родительская папка\" или Внутреннее накопители/ZipXtract (для извлеченного архива в меню \"Открыть с помощью\")</string>
+    <string name="archive_path">Папка с архивными файлами</string>
+    <string name="archive_path_summary">Укажите папку по умолчанию для извлечения.\nПо умолчанию это «родительская папка»</string>
+    <string name="extract_path_summary">Укажите папку извлечения по умолчанию.\nПо умолчанию используется «родительская папка» или Внутреннее хранилище/ZipXtract (для извлеченного архива в меню «Открыть с помощью»)</string>
     <string name="compress_tar">Сжать в TAR-архив</string>
     <string name="compression_success">Сжатие успешно</string>
-    <string name="archive_success">Архив создан успешно</string>
-    <string name="tar_creation_success">TAR архив создан успешно</string>
+    <string name="archive_success">Архив успешно создан</string>
+    <string name="tar_creation_success">TAR архив успешно создан</string>
     <string name="file_deleted">Удалено</string>
     <string name="operation_cancelled">Операция отменена</string>
     <string name="tar_creation_failed">Ошибка при создании TAR-архива</string>
-    <string name="compression_failed">Сжатие не удалось</string>
+    <string name="compression_failed">Не удалось сжать</string>
     <string name="confirm_password">Подтвердить пароль</string>
     <string name="passwords_do_not_match">Пароль не совпадает</string>
     <string name="wrong_password">Неверный пароль</string>
