--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -9,7 +9,7 @@
     <string name="ok">Добре</string>
     <string name="enter_password">Въведете парола</string>
     <string name="cancel">Отказ</string>
-    <string name="share">Споделяне на връзка към приложението</string>
+    <string name="share">Връзка за споделяне на приложението</string>
     <string name="compress_sevenz">7z архив</string>
     <string name="thread_count">Брой нишки</string>
     <string name="max_available_thread">0 за максимален брой налични нишки</string>
@@ -30,11 +30,11 @@
     <string name="no_password">Няма парола</string>
     <string name="extraction_success">Файлът е извлечен успешно</string>
     <string name="sevenz_creation_failed">Грешка при архивиране на 7z файл</string>
-    <string name="permission_denied">Разрешението е отказано</string>
+    <string name="permission_denied">Отказано разрешение</string>
     <string name="extraction_failed">Неуспешно извличане</string>
     <string name="sevenz_creation_success">7z файлът е архивиран успешно</string>
     <string name="home">Начало</string>
-    <string name="sd_card">SD карта</string>
+    <string name="sd_card">SD Карта</string>
     <string name="file_info">Информация за файла</string>
     <string name="tar_creation_failed">Грешка при архивиране на TAR файл</string>
     <string name="background">Фонов режим</string>
@@ -43,16 +43,16 @@
     <string name="license">Лиценз</string>
     <string name="about">Относно</string>
     <string name="grant_access">Предоставяне на достъп</string>
-    <string name="storage_access_permission_text">Това приложение изисква достъп до паметта на вашето устройство за правилна функционалност. Моля, дайте необходимите разрешения.</string>
+    <string name="storage_access_permission_text">Това приложение изисква достъп до хранилището на вашето устройство за правилна функционалност. Моля, дайте необходимите разрешения.</string>
     <string name="root_access_summary">Разрешете достъп до основната директория</string>
     <string name="root_access">Основен достъп</string>
-    <string name="internal_storage">Вътрешна памет</string>
-    <string name="root">Основен</string>
+    <string name="internal_storage">Вътрешно Хранилище</string>
+    <string name="root">Основна</string>
     <string name="directory_empty">Папката е празна</string>
     <string name="paste">Поставяне</string>
     <string name="archive">Архив</string>
-    <string name="open_with">Отворете с</string>
-    <string name="compress_with">Компресирайте с:</string>
+    <string name="open_with">Отваряне с</string>
+    <string name="compress_with">Компресиране с:</string>
     <string name="confirm_delete">Потвърждение за изтриване</string>
     <string name="confirm_delete_message">Сигурни ли сте, че искате да изтриете този елемент?</string>
     <string name="file_path">Път</string>
@@ -71,7 +71,7 @@
     <string name="move">Преместване в</string>
     <string name="copy_to">Копиране в</string>
     <string name="action_settings">Настройки</string>
-    <string name="select_all">Изберете всички</string>
+    <string name="select_all">Избиране на всички</string>
     <string name="search">Търсене</string>
     <string name="order">Ред</string>
     <string name="ascending">Възходящо</string>
@@ -92,7 +92,7 @@
     <string name="compression_success">Успешно компресиране</string>
     <string name="general_error_msg">Възникна неочаквана грешка.</string>
     <string name="unsupported_compression_format">Този формат на компресия не се поддържа.</string>
-    <string name="access_denied">Достъпът е отказан</string>
+    <string name="access_denied">Отказан достъп</string>
     <string name="no_files_to_archive">Няма избрани файлове за архивиране</string>
     <string name="sd_card_not_available">SD картата или външното хранилище не са открити</string>
     <string name="copying_files">Копиране…</string>
@@ -103,15 +103,15 @@
     <string name="deleting_files">Изтриване на файлове: %1$d/%2$d</string>
     <string name="extracting_progress">Извличане… %1$d %%</string>
     <string name="compressing_progress">Архивиране… %1$d %%</string>
-    <string name="extract_path_summary">Променете папката за извличане по подразбиране.. \nПо подразбиране е „основна папка“ или вътрешно хранилище/ZipXtract (за извлечения архив от менюто „Отвори с“)</string>
+    <string name="extract_path_summary">Променете папката за извличане по подразбиране. \nПо подразбиране е „основна папка“ или Вътрешно Хранилище/ZipXtract (за извлечения архив от менюто „Отвори с“)</string>
     <string name="multi_part_extract">Извлечение от няколко части:</string>
     <string name="info_tip">Полезен съвет</string>
     <string name="last_modified">Последна промяна</string>
-    <string name="storage">Съхранение</string>
+    <string name="storage">Хранилище</string>
     <string name="delete">Изтриване</string>
     <string name="copy_text">Копирай</string>
     <string name="delete_files_notification_name">Изтриване на файл</string>
-    <string name="info_tip_description">● Натиснете продължително файлове и папки или щракнете върху иконите на файлове/папки, за да ги изберете за архивира.\n\n● Щракнете върху файл, за да се покаже менюто за извличане за избор на опции за извличане.\n\n● Файловете, извлечени с помощта на менюто „Отваряне с“ на операционната система, се съхраняват във вътрешно хранилище/ZipXtract по подразбиране. Променете това в настройките на приложението.\n\n● Местоположението по подразбиране за архивиране или извличане на архиви (в рамките на приложението) е главната директория на съответния файл(ове). Това може да се промени в настройките на приложението.</string>
+    <string name="info_tip_description">● Натиснете продължително файлове и папки или щракнете върху иконите на файлове/папки, за да ги изберете за архивиране.\n\n● Щракнете върху файл, за да се покаже менюто за извличане за избор на опции за извличане.\n\n● Файловете, извлечени с помощта на менюто „Отваряне с“ на ОС, се съхраняват във Вътрешно Хранилище/ZipXtract по подразбиране. Променете това в настройките на приложението.\n\n● Местоположението по подразбиране за архивиране или извличане на архиви (в рамките на приложението) е главната директория на съответния файл(ове). Това може да се промени в настройките на приложението.</string>
     <string name="passwords_do_not_match">Паролите не съвпадат</string>
     <string name="wrong_password">Грешна парола</string>
     <string name="confirm_password">Потвърдете паролата</string>
