add update 7z archive #62

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,5 @@
     <string name="add">Add</string>
     <string name="directory_selection_disabled">Folder cannot be selected, select the files inside it.</string>
     <string name="select_file">Select File…</string>
+    <string name="select_files">Add (%d)</string>
 </resources>
