--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,12 @@
   ~
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  --><resources>
+  -->
+
+<resources>
     <!-- App name -->
     <string name="app_name" translatable="false">ZipXtract</string>
+
     <!-- General strings -->
     <string name="folder">Folder</string>
     <string name="share">Share App Link</string>
@@ -35,11 +38,25 @@
     <string name="directory_empty">Folder is empty</string>
     <string name="paste">Paste</string>
     <string name="storage">Storage</string>
+    <string name="invalid_value">Invalid input</string>
+    <string name="please_enter_value_between_0_and_22">Enter a value between 0 and 22</string>
+    <string name="archiving_started_in_background">Archiving started in background</string>
+    <string name="no_compression">No Compression</string>
+    <string name="remove">Remove</string>
+    <string name="preview_archive">Preview Archive</string>
+    <string name="add">Add</string>
+    <string name="directory_selection_disabled">Folder cannot be selected, select the files inside it.</string>
+    <string name="select_file">Select File…</string>
+    <string name="select_files">Add (%d)</string>
+    <string name="donate_desc">If you find ZipXtract useful, please consider supporting its development:</string>
+
     <!-- Bottom navigation -->
     <string name="archive">Archive</string>
     <string name="home">Home</string>
+
     <!-- Snackbar actions -->
     <string name="open_folder">Open Folder</string>
+
     <!-- Dialog strings (General dialogs and common strings of different dialog) -->
     <string name="enter_name_of_archive_optional">Archive Name</string>
     <string name="show_hide_selected_files">Show/Hide Selected Files</string>
@@ -65,9 +82,15 @@
     <string name="info_tip_description">\u25CF Long-press files and folders or click file/folder icons to select them for archiving.\n\n\u25CF Click a file to display the extraction menu for choosing extraction options.\n\n\u25CF Files extracted using \"Open With\" menu of OS are stored in "Internal Storage/ZipXtract" by default. Modify this in app settings.\n\n\u25CF The default location for archiving or extracting archives (within the app) is the parent directory of the respective file(s). This can be changed in the app settings.</string>
     <string name="crash_log">Crash Log</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="passwords_do_not_match">Password do not match</string>
     <string name="wrong_password">Wrong password</string>
+    <string name="error_too_many_parts">This would generate %1$d parts</string>
     <string name="file_already_exists">File already exists</string>
+    <string name="select_archive_type_title">Select archive type</string>
+    <string name="add_folder_confirmation_title">Add current folder?</string>
+    <string name="add_folder_confirmation_message">Do you want to add the folder \'%1$s\' to the archive?</string>
+    <string name="split_parts_number_req">Allow more than 100 split parts</string>
+
     <!-- Menu items -->
     <string name="move">Move to</string>
     <string name="copy_to">Copy to</string>
@@ -81,13 +104,17 @@
     <string name="name">Name</string>
     <string name="size">Size</string>
     <string name="time_of_creation">Modified</string>
-    <string name="extension">File extension</string>
+    <string name="extension">Extension</string>
     <string name="close">Close</string>
+
     <!-- Settings -->
     <string name="extract_path">Extracted files folder</string>
     <string name="archive_path">Archived files folder</string>
-    <string name="archive_path_summary">Modify the default folder for archived files.\nDefault is the current folder.</string>
-    <string name="extract_path_summary">Modify the default folder for extracted files.\nDefault is the current folder or \"/Internal Storage/ZipXtract\" (if extracted via the \"Open With\"-menu)</string>
+    <string name="archive_path_summary">Modify the default extract folder. \nDefault is \"parent folder\"</string>
+    <string name="extract_path_summary">Modify the default extract folder. \nDefault is \"parent folder\" or Internal Storage/ZipXtract (for \"Open With\" menu extracted archive)</string>
+    <string name="fast_search">Fast Search</string>
+    <string name="fast_search_summary">Use Android\'s media index for faster search</string>
+
     <!-- ZIP archive options -->
     <string name="create_zip">Archive ZIP</string>
     <string name="encryption_method">Encryption Method</string>
@@ -98,13 +125,16 @@
     <string name="split_zip">Split ZIP</string>
     <string name="_ten">Default is 64kb</string>
     <string name="settings_info_text">The default encryption method for files is AES, which provides a high level of security. However, please be aware that AES encryption can be time-consuming, particularly on lower-end devices.\n\nFor users with less powerful devices, an alternative like ZIP_STANDARD can be use. However, please note that this method does not offer the same level of security as AES.\n\nIf security is your primary concern, we strongly recommend using AES despite its longer processing time.</string>
+
     <!-- TAR archive options -->
     <string name="compress_tar">Archive TAR</string>
+
     <!-- 7z archive options -->
     <string name="compress_sevenz">Archive 7z</string>
     <string name="solid_compression">Solid Compression</string>
     <string name="thread_count">Thread Count</string>
     <string name="max_available_thread">0 for maximum available threads</string>
+
     <!-- Success toast messages -->
     <string name="compression_success">Compression successful</string>
     <string name="extraction_success">File extracted successfully</string>
@@ -115,6 +145,7 @@
     <string name="file_deleted">Deleted</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="operation_cancelled">Operation cancelled</string>
+
     <!-- Error toast messages -->
     <string name="tar_creation_failed">Error archiving TAR file</string>
     <string name="compression_failed">Compression failed</string>
@@ -128,12 +159,15 @@
     <string name="permission_denied">Permission Denied</string>
     <string name="no_file_selected">No File Selected</string>
     <string name="sd_card_not_available">SD card or external storage not detected</string>
+
+
     <!-- Notification title-->
     <string name="copying_files">Copying…</string>
     <string name="moving_files">Moving…</string>
     <string name="delete_ongoing">Deleting…</string>
     <string name="extraction_ongoing">Extracting…</string>
     <string name="archive_ongoing">Archiving…</string>
+
     <!-- Notification content-->
     <string name="copying_files_progress">Copying files: %1$d/%2$d</string>
     <string name="moving_files_progress">Moving files: %1$d/%2$d</string>
@@ -141,11 +175,13 @@
     <string name="extracting_progress">Extracting… %1$d %%</string>
     <string name="compressing_progress">Archiving… %1$d %%</string>
     <string name="compression_ongoing">Compressing…</string>
+
     <!-- Notification channel name-->
     <string name="delete_files_notification_name">Delete File</string>
     <string name="copy_move_files_notification_name">Copy/Move Files</string>
     <string name="extract_archive_notification_name">Extract Archive</string>
     <string name="compress_archive_notification_name">Compress Archive</string>
+
     <!-- non-translatable strings -->
     <string name="zip" translatable="false">ZIP</string>
     <string name="_7z" translatable="false">7z</string>
@@ -156,4 +192,5 @@
     <string name="gzip" translatable="false">GZIP</string>
     <string name="liberapay" translatable="false">Liberapay</string>
     <string name="author_wirelessalien" translatable="false">Author: WirelessAlien</string>
+    <string name="zstd" translatable="false">ZSTD</string>
 </resources>
